@@ -6,6 +6,7 @@ Changes since Emotion 1.0.0:
 Additions:
 	- Add support for "playback_started" callback to generic player.
 	- Implement SPU switch for generic/vlc.
+	- Sync rendering with Ecore_Animator.
 
 Fixes:
 	- build out of tree.
